[package]
name = "shoehorn"
version = "0.2.0"
edition = "2024"
description = "HTTP proxy that forwards traffic through a SOCKS5 server."
license = "MIT"
readme = "README.md"

[[bin]]
name = "shoehorn"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "net", "io-util", "macros"] }
tokio-socks = "0.5.2"
